--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -17,7 +17,7 @@ $(SHLIB): ${ZSTD_BUILD_DIR}/lib/libzstd.a
 ${ZSTD_BUILD_DIR}/lib/libzstd.a:
 ifneq (@HAS_ZSTD@,1)
 	cd ${ZSTD_BUILD_DIR} &&\
-		cmake "${ZSTD_SRC_DIR}/build/cmake/" \
+		cmake ../src/${ZSTD_SRC_DIR}/build/cmake/ \
 			-DCMAKE_CXX_FLAGS="${CXXFLAGS}" \
 			-DCMAKE_C_FLAGS="${CFLAGS}" \
 			-DCMAKE_POSITION_INDEPENDENT_CODE=ON \
